# aws-solutions-recommender-agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: specify-rules.mdc
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
specs/1-aws-arch-agent/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-aws-arch-agent/checklists/: requirements.md
specs/1-aws-arch-agent/contracts/: api.yaml
src/agents/: __init__.py
src/agents/prompts/: __init__.py  chinese.py
src/agents/state/: __init__.py  agent_state.py
src/api/: main.py
src/api/middleware/: __init__.py  error_handler.py  rate_limiter.py  validator.py
src/api/routes/: conversations.py  health.py  messages.py
src/api/schemas/: requests.py  responses.py
src/cli/: __init__.py  chat.py  main.py
src/models/: __init__.py  architecture_recommendation.py  configuration.py  context.py  conversation.py  cost_component.py  intent.py  message.py  pricing_calculation.py  service.py  service_cost.py  user_requirement.py
src/repositories/: __init__.py  conversation_repository.py  intent_repository.py  message_repository.py  user_requirement_repository.py
src/services/aws_knowledge/: __init__.py  base.py  catalog.py  validator.py
src/services/conversation/: __init__.py  context_retriever.py  context_updater.py  formatter.py  history_manager.py  orchestrator.py  session_manager.py  summarizer.py
src/services/diagram/: __init__.py  generator.py  icons.py  renderer.py  storage.py
src/services/intent/: __init__.py  aggregator.py  classifier.py  extractor.py  orchestrator.py  processor.py
src/services/pricing/: __init__.py  cache.py  calculator.py  comparison.py  updater.py  whatif.py
src/services/recommendation/: __init__.py  config_spec.py  modifier.py  recommender.py  requirement_extractor.py  well_architected.py
src/tools/aws_pricing/: __init__.py  client.py  handler.py  mcp_tool.py
src/utils/compliance/: __init__.py  data_privacy.py
src/utils/logging/: __init__.py  logger.py
src/utils/metrics/: __init__.py  (+1 more)
tests/contract/: __init__.py  test_api_schema.py
tests/integration/: helpers.py
tests/unit/: __init__.py  fixtures.py
(+5 files in other folders)
